# AI-Generated-Secure-Infrastructure-as-Code-Copilot

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  activity.txt  config.yaml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: deploy.yml  security-review.yml
app/: __init__.py  config.py  main.py
app/services/: __init__.py  ai_service.py  github_service.py  security_review.py
iac_cli/: bedrock_agent.py  cicd.py  cli.py  cost_estimator.py  error_collector.py  feedback.py  interactive.py  patch_generator.py  security.py  storage.py  validator.py  version_control.py
tests/: __init__.py  conftest.py  test_security_review.py  test_validator.py
venv311/: pyvenv.cfg
